--- a/student-spring-main/Dockerfile
+++ b/student-spring-main/Dockerfile
@@ -1,5 +1,5 @@
 # Use OpenJDK
-FROM eclipse-temurin:21-jdk-alpine
+FROM FROM eclipse-temurin:21-jdk-alpine
 
 WORKDIR /app
 
@@ -8,4 +8,5 @@ COPY target/*.jar app.jar
 EXPOSE 8080
 
 # Pass Render's $PORT to Spring Boot
+
 CMD ["sh", "-c", "java -Dserver.port=$PORT -jar app.jar"]
